Floating Button: Overflow Issue (#194)

--- a/express/blocks/shared/floating-cta.css
+++ b/express/blocks/shared/floating-cta.css
@@ -53,7 +53,7 @@ main .floating-button {
     background-color: var(--color-gray-200);
     transition: background-color .3s, padding .3s, margin-bottom 0.6s ease-out, bottom .3s;
     z-index: 2;
-    max-width: 100%;
+    max-width: 100vw;
     pointer-events: auto;
     margin-bottom: 24px;
 }
